--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
   auto_size_text: ^3.0.0
+  url_launcher: ^6.1.0
 
 dev_dependencies:
   flutter_test:
