--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   carousel_slider: ^4.0.0
   auto_size_text: ^3.0.0
   url_launcher: ^6.1.0
+  file_picker: ^4.5.1
 
 dev_dependencies:
   flutter_test:
