--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  carousel_slider: ^4.0.0
-  auto_size_text: ^3.0.0
-  url_launcher: ^6.1.0
-  file_picker: ^4.5.1
+  cupertino_icons: 1.0.2
+  carousel_slider: 4.0.0
+  auto_size_text: 3.0.0
+  url_launcher: 6.1.0
+  file_picker: 4.5.1
+  flutter_pdfview: 1.2.2
+  shared_preferences: ^2.0.14
 
 dev_dependencies:
   flutter_test:
