--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.calaxar.pmav_flutter">
+    package="com.calum_hay.pmav">
    <application
         android:label="PMAV"
         android:name="${applicationName}"
