--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   file_picker: 4.5.1
   flutter_pdfview: 1.2.2
   shared_preferences: ^2.0.14
+  flutter_automation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
